--- a/style.css
+++ b/style.css
@@ -9,12 +9,36 @@
 }
 
 body {
-  min-height: 100vh;
   position: relative;
-  padding-bottom: 80px;
   padding-top: 100px;
 }
 
+.background-image {
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: scroll;
+  width: 100%;
+  height: 100vh;
+  animation: animation 15s infinite ease-in-out;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+    background-image: url(zdjecia/tlo3.jpg);
+  }
+  25% {
+    background-image: url(zdjecia/tlo2.jpg);
+  }
+  50% {
+    background-image: url(zdjecia/tlo5.jpg);
+  }
+  75% {
+    background-image: url(zdjecia/tlo4.png);
+  }
+}
 header {
   position: fixed;
   height: 100px;
@@ -26,7 +50,7 @@ header {
   justify-content: space-between;
   z-index: 2000;
   margin-bottom: 20px;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 /* LOGO */
@@ -46,18 +70,49 @@ header {
 
 /* NAVBAR */
 
-.nav-bar {
+/* .nav-bar {
   display: flex;
   align-items: center;
   justify-items: center;
-}
-.nav-bar a {
-  font-size: 1rem;
-  font-weight: 700;
-  margin: 0px 10px;
-  text-transform: uppercase;
+} */
+
+.nav-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  width: 200px;
+  height: 54vh;
+  transition: all 0.4s ease;
+  border: 2px solid gray;
+  margin-top: 1px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
+.nav-bar a {
+  display: block;
+  font-size: 1rem;
+  font-weight: 700;
+  margin-top: 10px;
+  padding: 25px 15px;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+}
+
+.nav-bar a::after {
+  content: "";
+}
+.nav-bar a:is(:link, :active, :visited).active {
+  margin-top: 10px;
+  padding: 25px 15px 17px 15px;
+}
+
+.nav-bar.open {
+  right: 1px;
+}
 /* MENU BUTTON  */
 
 .main {
@@ -66,8 +121,8 @@ header {
 }
 
 .menu-icon {
-  width: 40px;
   cursor: pointer;
   z-index: 10001;
   display: block;
+  margin-right: 20px;
 }
