--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   list-style: none;
   text-decoration: none;
@@ -9,11 +9,13 @@
 }
 
 body {
+  min-height: 100vh;
   position: relative;
   padding-top: 100px;
 }
 
 .background-image {
+  position: absolute;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -26,16 +28,16 @@ body {
 @keyframes animation {
   0%,
   100% {
-    background-image: url(zdjecia/tlo3.jpg);
+    background-image: url(../zdjecia/tlo5.jpg);
   }
   25% {
-    background-image: url(zdjecia/tlo2.jpg);
+    background-image: url(../zdjecia/tlo2.jpg);
   }
   50% {
-    background-image: url(zdjecia/tlo5.jpg);
+    background-image: url(../zdjecia/tlo3.jpg);
   }
   75% {
-    background-image: url(zdjecia/tlo4.png);
+    background-image: url(../zdjecia/tlo4.png);
   }
 }
 
@@ -50,8 +52,7 @@ header {
   align-items: center;
   justify-content: space-between;
   z-index: 2000;
-  margin-bottom: 20px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+  border-bottom: 1px solid rgb(231, 180, 96);
 }
 
 /* LOGO */
@@ -119,13 +120,13 @@ header {
 .main {
   display: flex;
   align-items: center;
+  margin-right: 15px;
 }
 
 .menu-icon {
   cursor: pointer;
   z-index: 10001;
   display: block;
-  margin-right: 20px;
 }
 
 /* Footer */
