--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
   box-sizing: border-box;
   color: white;
 }
