--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,7 +2,22 @@ section#wrapper {
   width: 100%;
 }
 
-section#introduce {
+.title {
+  height: 200px;
+  padding: 50px 0;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 3.2rem;
+  font-family: "Brush Script MT", cursive;
+  color: rgb(231, 180, 96);
+  /* color: white; */
+}
+
+section#about-us {
   background-color: rgba(0, 0, 0, 0.3);
   position: relative;
   width: 360px;
@@ -13,24 +28,18 @@ section#introduce {
   border: 1px solid rgba(231, 180, 96, 0.6);
   position: relative;
   padding-bottom: 50px;
-}
-
-.title {
-  height: 200px;
-  padding: 50px 0;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-h1 {
-  font-size: 3.2rem;
-  font-family: "Brush Script MT", cursive;
-  /* color: rgb(231, 180, 96); */
-  color: white;
+  padding-top: 15px;
 }
 
 h3 {
   font-size: 1rem;
   /* color: rgb(231, 180, 96); */
-  color: white;
+  color: rgb(255, 255, 255);
+}
+
+.abt-us-photo {
+  border: 1px solid rgb(231, 180, 96);
+  margin-top: 20px;
+  width: 90%;
+  box-shadow: 12px 12px 3px 1px rgba(231, 180, 96, 0.5);
 }
