--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@ body {
   min-height: 100vh;
   position: relative;
   padding-top: 100px;
+  /* background-color: #141010; */
 }
 
 .background-image {
@@ -21,10 +22,13 @@ body {
   background-size: cover;
   background-attachment: scroll;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   animation: animation 15s infinite ease-in-out;
 }
 
+p {
+  font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
+}
 @keyframes animation {
   0%,
   100% {
