--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,43 +3,55 @@ section#wrapper {
 }
 
 .title {
+  display: flex;
+  align-items: center;
   height: 200px;
-  padding: 50px 0;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-top: 20px;
   text-align: center;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  border: 1px solid rgba(231, 180, 96, 0.6);
 }
 
-h1 {
+.title h1 {
   font-size: 3.2rem;
+  color: #fffdf6;
   font-family: "Brush Script MT", cursive;
-  color: rgb(231, 180, 96);
   /* color: white; */
 }
 
 section#about-us {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
   position: relative;
-  width: 360px;
+  width: 100%;
   margin-top: 20px;
   justify-content: center;
   align-items: center;
   text-align: center;
-  border: 1px solid rgba(231, 180, 96, 0.6);
   position: relative;
   padding-bottom: 50px;
   padding-top: 15px;
+  line-height: 1.7em;
 }
-
-h3 {
-  font-size: 1rem;
+section#about-us span {
+  font-weight: 700;
+  font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
+  color: rgb(231, 180, 96);
+}
+p {
+  font-size: 1.1rem;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-left: 4%;
+  word-wrap: break-word;
   /* color: rgb(231, 180, 96); */
   color: rgb(255, 255, 255);
+  font-weight: 300;
+  text-align: left;
 }
 
 .abt-us-photo {
-  border: 1px solid rgb(231, 180, 96);
   margin-top: 20px;
   width: 90%;
-  box-shadow: 12px 12px 3px 1px rgba(231, 180, 96, 0.5);
+  box-shadow: 10px 10px 1px 1px #444f72c7;
 }
