--- a/css/global.css
+++ b/css/global.css
@@ -26,6 +26,12 @@ body {
   animation: animation 15s infinite ease-in-out;
 }
 
+section#wrapper {
+  min-height: 100vh;
+  width: 100%;
+  margin-bottom: 800px;
+}
+
 p {
   font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
 }
@@ -134,3 +140,53 @@ header {
 }
 
 /* Footer */
+footer {
+  width: 100%;
+  height: 700px;
+  position: absolute;
+  bottom: 0;
+  background: black;
+  overflow: hidden;
+}
+.row::before {
+  content: "";
+  position: absolute;
+  left: 10%;
+  top: 0px;
+  height: 1px;
+  width: 80%;
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 50px;
+  position: relative;
+}
+
+.footer-column {
+  width: 100%;
+  text-align: left;
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+.footer-icon {
+  width: 20px;
+  position: absolute;
+}
+
+footer h3 {
+  font-size: 1.5em;
+  text-shadow: 1px 1px 1px RGBA(255, 255, 255, 0.63);
+  justify-content: left;
+  text-align: left;
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+}
+
+footer li {
+  margin-top: 20px;
+}
