--- a/css/homepage.css
+++ b/css/homepage.css
@@ -102,7 +102,8 @@ section#promotion .usluga {
   text-transform: none;
 }
 
-section#our-services {
+section#our-services,
+section#for-kids {
   margin-top: 0;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -123,4 +124,8 @@ section#our-services {
 .for-kids-photo {
   width: 90%;
   box-shadow: 10px 10px 1px 1px #444f72c7;
+}
+
+section#for-kids {
+  margin-bottom: 300px;
 }
