--- a/css/global.css
+++ b/css/global.css
@@ -12,7 +12,6 @@ body {
   min-height: 100vh;
   position: relative;
   padding-top: 100px;
-  /* background-color: #141010; */
 }
 
 .background-image {
@@ -145,7 +144,7 @@ footer {
   height: 700px;
   position: absolute;
   bottom: 0;
-  background: black;
+  background-color: #141111;
   overflow: hidden;
 }
 .row::before {
@@ -189,4 +188,7 @@ footer h3 {
 
 footer li {
   margin-top: 20px;
+}
+footer span {
+  margin-left: 30px;
 }
