--- a/css/global.css
+++ b/css/global.css
@@ -141,7 +141,7 @@ header {
 /* Footer */
 footer {
   width: 100%;
-  height: 700px;
+  height: 800px;
   position: absolute;
   bottom: 0;
   background-color: #141111;
@@ -168,7 +168,7 @@ footer {
 .footer-column {
   width: 100%;
   text-align: left;
-  margin-top: 50px;
+  margin-top: 40px;
   margin-left: 20px;
 }
 
@@ -191,4 +191,16 @@ footer li {
 }
 footer span {
   margin-left: 30px;
+}
+
+.copyright-container {
+  border-top: 1px solid blue;
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+  text-align: center;
+  font-size: 10px;
 }
