--- a/css/global.css
+++ b/css/global.css
@@ -16,38 +16,13 @@ body {
 
 .background-image {
   position: absolute;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: scroll;
+  background-color: #f8f9fa;
   width: 100%;
   min-height: 100vh;
-  animation: animation 15s infinite ease-in-out;
-}
-
-section#wrapper {
-  min-height: 100vh;
-  width: 100%;
-  margin-bottom: 800px;
 }
 
 p {
   font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
-}
-@keyframes animation {
-  0%,
-  100% {
-    background-image: url(../zdjecia/tlo5.jpg);
-  }
-  25% {
-    background-image: url(../zdjecia/tlo2.jpg);
-  }
-  50% {
-    background-image: url(../zdjecia/tlo3.jpg);
-  }
-  75% {
-    background-image: url(../zdjecia/tlo4.png);
-  }
 }
 
 /* HEADER */
@@ -193,14 +168,11 @@ footer span {
   margin-left: 30px;
 }
 
-.copyright-container {
-  border-top: 1px solid blue;
-}
-
 .copyright {
   display: flex;
   justify-content: center;
   margin: 10px 0;
   text-align: center;
   font-size: 10px;
+  color: white;
 }
