--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,7 +1,3 @@
-section#wrapper {
-  width: 100%;
-}
-
 .title {
   display: flex;
   align-items: center;
@@ -12,7 +8,7 @@ section#wrapper {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  animation: animation 15s infinite ease-in-out;
+  background-image: url("../zdjecia/tlo5.jpg");
   border: 1px solid rgba(0, 0, 0, 0.6);
 }
 .title::before {
@@ -21,22 +17,6 @@ section#wrapper {
   height: 200px;
   width: 100%;
   background-color: rgba(231, 180, 96, 0.6);
-}
-
-@keyframes animation {
-  0%,
-  100% {
-    background-image: url(../zdjecia/tlo5.jpg);
-  }
-  25% {
-    background-image: url(../zdjecia/tlo2.jpg);
-  }
-  50% {
-    background-image: url(../zdjecia/tlo3.jpg);
-  }
-  75% {
-    background-image: url(../zdjecia/tlo4.png);
-  }
 }
 
 .title h1 {
@@ -55,14 +35,13 @@ section#for-kids {
   position: relative;
   width: 100%;
   margin-top: 20px;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   position: relative;
   padding-bottom: 50px;
   padding-top: 15px;
   line-height: 1.7em;
   padding-bottom: 50px;
+  background: rgb(230, 228, 228);
 }
 section#about-us span,
 section#our-services span,
@@ -179,7 +158,7 @@ section#for-kids {
   overflow: hidden;
 }
 
-.our-services-picture .our-services-photo {
+.our-services-photo {
   object-fit: cover;
   width: 90%;
   height: 350px;
@@ -198,4 +177,36 @@ section#for-kids {
 .follow-icon {
   margin-right: 20px;
   width: 40px;
+}
+
+@media (min-width: 800px) {
+  .title {
+    height: 300px;
+  }
+
+  .title::before {
+    height: 300px;
+  }
+
+  .about-us-text {
+    width: 80%;
+  }
+
+  section#about-us p,
+  section#our-services p,
+  section#for-kids p {
+    font-size: 1.4rem;
+  }
+
+  .abt-us-photo {
+    width: 600px;
+  }
+  .our-services-photo {
+    height: 500px;
+    width: 600px;
+  }
+
+  .for-kids-photo {
+    width: 600px;
+  }
 }
