--- a/css/header_and_footer.css
+++ b/css/header_and_footer.css
@@ -54,7 +54,7 @@
   margin-right: 15px;
 }
 
-.menu-icon {
+.main .menu-icon {
   cursor: pointer;
   z-index: 10001;
   display: block;
@@ -153,7 +153,7 @@ footer span {
     white-space: nowrap;
   }
 
-  .menu-icon {
+  .main .menu-icon {
     display: none;
   }
 
