--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,15 @@
+p {
+  position: relative;
+  font-size: 1.1rem;
+  font-weight: 300;
+  text-align: left;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-left: 4%;
+  word-wrap: break-word;
+  color: #1d2434;
+}
+
 .title::before {
   content: "";
   position: absolute;
@@ -7,11 +19,11 @@
 }
 
 .title {
+  width: 100%;
+  height: 200px;
   display: flex;
   align-items: center;
-  height: 200px;
   text-align: center;
-  width: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -20,12 +32,12 @@
 }
 
 .title h1 {
-  font-size: 3.2rem;
-  color: #fffdf6;
+  position: relative;
   font-family: "Brush Script MT", cursive;
+  color: #fffdf6;
+  font-size: 3.2rem;
   text-shadow: 2px 2px 2px RGBA(0, 0, 0, 0.63);
   /* color: rgb(231, 180, 96); */
-  position: relative;
   z-index: 1;
 }
 
@@ -34,55 +46,40 @@
 .for-kids {
   position: relative;
   width: 100%;
-  margin-top: 20px;
   text-align: center;
-  position: relative;
+  line-height: 1.7em;
+  margin-top: 20px;
   padding-bottom: 50px;
   padding-top: 15px;
-  line-height: 1.7em;
-  padding-bottom: 50px;
   background: rgb(230, 228, 228);
 }
 
 .about-us span,
 .our-services span,
 .for-kids span {
-  font-weight: 700;
   font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 700;
   color: #1d2434;
   text-transform: uppercase;
 }
 
 .about-us-text {
+  position: relative;
   width: 98%;
-  position: relative;
-}
-
-p {
-  font-size: 1.1rem;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-left: 4%;
-  word-wrap: break-word;
-  /* color: rgb(231, 180, 96); */
-  color: #1d2434;
-  font-weight: 300;
-  text-align: left;
-  position: relative;
 }
 
 .about-us-text::before,
 .about-us-text::after {
-  position: absolute;
   content: "";
+  position: absolute;
   width: 25px;
   height: 25px;
 }
 
 .about-us-text::before {
+  left: 0px;
   border-left: 3px solid #1d2434;
   border-top: 3px solid #1d2434;
-  left: 0px;
 }
 
 .about-us-text::after {
@@ -96,14 +93,14 @@ p {
   padding: 5px;
 }
 
-.abt-us-photo {
-  margin-top: 40px;
-  width: 90%;
-  box-shadow: -10px -20px 1px 1px rgb(199, 146, 60, 0.8);
+.about-us .abt-us-photo {
   position: relative;
+  width: 90%;
+  margin-top: 40px;
+  box-shadow: -10px -20px 1px 1px rgb(199, 146, 60, 0.8);
 }
 
-.abt-us-photo::before {
+.about-us .abt-us-photo::before {
   content: "";
   position: absolute;
 }
@@ -120,15 +117,15 @@ p {
 
 .promotion span {
   display: block;
-  color: #2c2d34;
   font-weight: 800;
   font-size: 24px;
   text-transform: uppercase;
+  color: #2c2d34;
 }
 
 .promotion h2 {
-  display: block;
   font-family: "Kumbh Sans", Helvetica, Arial, Lucida, sans-serif;
+  display: block;
   max-width: 20em;
   font-weight: 500;
 }
@@ -137,14 +134,12 @@ p {
   display: flex;
   text-align: center;
   justify-content: center;
-  text-align: center;
-  font-weight: 700;
   margin-top: 15px;
   padding: 20px 60px;
-  border: 2px solid white;
-  text-transform: none;
   font-size: 30px;
+  font-weight: 700;
   text-transform: uppercase;
+  border: 2px solid white;
 }
 
 .our-services,
@@ -159,15 +154,10 @@ p {
   overflow: hidden;
 }
 
-.our-services-photo {
-  object-fit: cover;
+.our-services .our-services-photo {
   width: 90%;
   height: 350px;
-  box-shadow: 10px 10px 1px 1px rgba(199, 146, 60, 0.8);
-}
-
-.for-kids-photo {
-  width: 90%;
+  object-fit: cover;
   box-shadow: 10px 10px 1px 1px rgba(199, 146, 60, 0.8);
 }
 
@@ -175,9 +165,14 @@ p {
   margin-bottom: 800px;
 }
 
+.for-kids .for-kids-photo {
+  width: 90%;
+  box-shadow: 10px 10px 1px 1px rgba(199, 146, 60, 0.8);
+}
+
 .follow-icon {
-  margin-right: 20px;
   width: 40px;
+  margin-right: 20px;
 }
 
 @media (min-width: 800px) {
@@ -199,12 +194,12 @@ p {
     font-size: 1.4rem;
   }
 
-  .abt-us-photo,
-  .for-kids-photo,
-  .our-services-photo {
+  .about-us .abt-us-photo,
+  .our-services .our-services-photo,
+  .for-kids .for-kids-photo {
     width: 600px;
   }
-  .our-services-photo {
+  .our-services .our-services-photo {
     height: 500px;
   }
 }
@@ -255,9 +250,11 @@ p {
   .our-services .picture-container {
     width: 40%;
   }
+
   .our-services .about-us-text {
     margin-left: 0px;
   }
+
   .for-kids {
     margin-bottom: 450px;
   }
