--- a/css/header_and_footer.css
+++ b/css/header_and_footer.css
@@ -130,12 +130,11 @@ footer span {
     margin: 0px;
   }
   .nav-bar {
-    display: flex;
+    width: 0px;
+    height: 0px;
     flex-direction: row;
     justify-content: center;
     position: relative;
-    width: 0px;
-    height: 0px;
     transition: none;
     margin-top: 1px;
     background: none;
@@ -174,6 +173,10 @@ footer span {
   }
   .row {
     flex-direction: row;
+  }
+
+  .nav-bar a {
+    margin-right: 50px;
   }
 
   .footer-column {
