--- a/css/homepage.css
+++ b/css/homepage.css
@@ -7,26 +7,26 @@ p {
   margin-block-end: 1em;
   margin-left: 4%;
   word-wrap: break-word;
-  color: #1d2434;
 }
 
 .title::before {
   content: "";
   position: absolute;
-  height: 200px;
+  min-height: 80vh;
   width: 100%;
   background-color: rgba(231, 180, 96, 0.6);
 }
 
 .title {
   width: 100%;
-  height: 200px;
+  min-height: 80vh;
   display: flex;
   align-items: center;
   text-align: center;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   background-image: url("../zdjecia/tlo5.jpg");
   border: 1px solid rgba(0, 0, 0, 0.6);
 }
@@ -36,8 +36,7 @@ p {
   font-family: "Brush Script MT", cursive;
   color: #fffdf6;
   font-size: 3.2rem;
-  text-shadow: 2px 2px 2px RGBA(0, 0, 0, 0.63);
-  /* color: rgb(231, 180, 96); */
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.63);
   z-index: 1;
 }
 
@@ -48,7 +47,6 @@ p {
   width: 100%;
   text-align: center;
   line-height: 1.7em;
-  margin-top: 20px;
   padding-bottom: 50px;
   padding-top: 15px;
   background: rgb(230, 228, 228);
