--- a/css/gallery.css
+++ b/css/gallery.css
@@ -50,12 +50,17 @@
   align-items: center;
   position: fixed;
   flex-wrap: wrap;
+  animation: fadeIn 0.2s;
   background: rgba(0, 0, 0, 0.7);
   left: 0;
   top: 0;
   height: 100vh;
   width: 100vw;
   backdrop-filter: blur(10px);
+}
+
+.popup:fade-out {
+  animation: fadeOut 0.2s both;
 }
 
 .popup.hidden {
@@ -92,6 +97,7 @@
   border: none;
   color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
+  animation: fadeIn 0.1s;
 }
 
 .popup__arrow--left {
@@ -100,4 +106,22 @@
 
 .popup__arrow--right {
   right: -11%;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1.2;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1.2;
+  }
+  to {
+    opacity: 0;
+  }
 }
