--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .gallery {
   display: grid;
   align-items: center;
@@ -11,8 +15,15 @@
   height: auto;
   width: 90%;
   margin-top: 20px;
-  margin-bottom: 800px;
-  background: rgba(202, 142, 44, 0.4);
+  margin-bottom: 900px;
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.8),
+    rgba(51, 51, 51, 0.8)
+  );
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgb(199, 146, 60);
+  border-radius: 20px;
 }
 
 .gallery__thumbnail {
@@ -30,18 +41,20 @@
   width: 100%;
   object-fit: cover;
   overflow: auto;
-  border: 3px solid rgba(0, 0, 0, 0.6);
+  border: 1px solid rgb(199, 146, 60);
   border-radius: 20px;
-  box-shadow: 0 0 2px rgba(56, 54, 54, 0.4);
+}
+
+.gallery__thumbnail:first-child {
+  margin-top: 20px;
+}
+
+.gallery__thumbnail:last-child {
+  padding-bottom: 20px;
 }
 
 .gallery__thumbnail:hover {
   transform: scale(1.05);
-}
-
-.dzialaj-pls {
-  width: 100%;
-  height: 50px;
 }
 
 .popup {
@@ -50,12 +63,12 @@
   align-items: center;
   position: fixed;
   flex-wrap: wrap;
-  animation: fadeIn 0.2s;
-  background: rgba(0, 0, 0, 0.7);
   left: 0;
   top: 0;
   height: 100vh;
   width: 100vw;
+  background: rgba(0, 0, 0, 0.7);
+  animation: fadeIn 0.2s;
   backdrop-filter: blur(10px);
 }
 
@@ -68,6 +81,7 @@
 }
 
 .popup__img {
+  padding-top: 100px;
   max-width: 90%;
   max-height: 90%;
 }
@@ -86,9 +100,13 @@
   cursor: pointer;
 }
 
+.popup__close:hover {
+  color: white;
+}
+
 .popup__arrow {
   position: absolute;
-  top: 42%;
+  top: 50%;
   width: 120px;
   height: 120px;
   font-size: 60px;
@@ -97,15 +115,19 @@
   border: none;
   color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
-  animation: fadeIn 0.1s;
+  animation: fadeIn 1s;
+}
+
+.popup__arrow:hover {
+  color: white;
 }
 
 .popup__arrow--left {
-  left: -11%;
+  left: 0%;
 }
 
 .popup__arrow--right {
-  right: -11%;
+  right: 0%;
 }
 
 @keyframes fadeIn {
@@ -123,5 +145,63 @@
   }
   to {
     opacity: 0;
+  }
+}
+
+@media (min-width: 600px) {
+  .popup {
+    height: 100vh;
+    width: 100vw;
+  }
+  .popup__img {
+    max-width: 80%;
+    max-height: 80%;
+    padding-bottom: 100px;
+  }
+}
+
+@media (min-width: 800px) {
+  .gallery__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .popup__img {
+    margin-top: 120px;
+    padding-top: 50px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .gallery__content-container {
+    margin-top: 50px;
+  }
+  .gallery__thumbnail {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .popup__close {
+    right: 60px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .gallery__content-container {
+    width: 80%;
+    margin-bottom: 600px;
+  }
+
+  .popup__close {
+    font-size: 35px;
+    top: 120px;
+    right: 140px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .gallery__thumbnail {
+    flex-basis: calc(25% - 10px);
   }
 }
