--- a/css/header_and_footer.css
+++ b/css/header_and_footer.css
@@ -37,7 +37,7 @@
   padding: 25px 15px;
   text-align: center;
   text-transform: uppercase;
-  color: white;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .nav-bar a.active {
