--- a/css/homepage.css
+++ b/css/homepage.css
@@ -138,6 +138,13 @@ p {
   text-transform: uppercase;
   border: 2px solid white;
   font-weight: 700;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.promotion .usluga:hover {
+  background: rgba(88, 67, 33, 0.3);
 }
 
 .our-services,
