--- a/css/header_and_footer.css
+++ b/css/header_and_footer.css
@@ -38,6 +38,11 @@
   text-align: center;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.8);
+  transition: 0.5s;
+}
+
+.nav-bar a:hover {
+  color: white;
 }
 
 .nav-bar a.active {
@@ -141,14 +146,8 @@ footer span {
   }
 
   .nav-bar a {
-    display: block;
-    font-size: 1rem;
-    font-weight: 700;
     margin-top: 0px;
     padding: 0px 15px;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
     white-space: nowrap;
   }
 
