--- a/css/homepage.css
+++ b/css/homepage.css
@@ -90,7 +90,11 @@ p {
 .about-us-text p {
   padding: 5px;
 }
-
+.about-us .abt-us-photo,
+.our-services .our-services-photo,
+.for-kids .for-kids-photo {
+  cursor: pointer;
+}
 .about-us .abt-us-photo {
   position: relative;
   width: 90%;
@@ -163,6 +167,7 @@ p {
   width: 90%;
   height: 350px;
   object-fit: cover;
+
   box-shadow: 10px 10px 1px 1px rgba(199, 146, 60, 0.8);
 }
 
@@ -180,6 +185,51 @@ p {
   margin-right: 20px;
 }
 
+.popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  flex-wrap: wrap;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.7);
+  animation: fadeIn 0.2s;
+  backdrop-filter: blur(10px);
+}
+.popup:fade-out {
+  animation: fadeOut 0.2s both;
+}
+
+.popup.hidden {
+  display: none;
+}
+
+.popup__img {
+  padding-top: 100px;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.popup__close {
+  position: fixed;
+  right: 5px;
+  top: 150px;
+  width: 20px;
+  height: 20px;
+  font-size: 25px;
+  color: rgba(255, 255, 255, 0.3);
+  border: none;
+  box-shadow: none;
+  background: none;
+  cursor: pointer;
+}
+
+.popup__close:hover {
+  color: white;
+}
 @media (min-width: 800px) {
   .title {
     height: 300px;
