--- a/css/gallery.css
+++ b/css/gallery.css
@@ -172,6 +172,13 @@ body {
     margin-top: 120px;
     padding-top: 50px;
   }
+  .gallery__thumbnail:first-child {
+    margin-top: 0;
+  }
+
+  .gallery__thumbnail:last-child {
+    padding-bottom: 0;
+  }
 }
 
 @media (min-width: 1000px) {
